syntax = "proto3";

package hr.hr_general.labor_contract_print;


service HrLaborContractPrintService {
  rpc searchLaborContractPrint (LaborContractPrintSearchRequest) returns (Response);
  rpc printContract (LaborContractPrintSearchRequest) returns (Response);
  rpc searchCertificateIssue (CertificateIssueSearchRequest) returns (Response);
  rpc auCertificateIssue (CertificateIssueRequest) returns (Response);
  rpc deleteCertificateIssue (CertificateIssueRequest) returns (Response);
  rpc searchCertificateIssueList (CertificateIssueSearchRequest) returns (Response);

  
}

message LaborContractPrintSearchResult { 
  int32 IdxNo = 1;
  int32 EmpSeq = 2;
  string ContractKind = 3;
  string DeptSeq = 4;
  string BeginDate = 5;
  string EndDate = 6;
  string EmpType = 7;
}

message CertificateIssueSearchResult { 
  int32 IdxNo = 1;
  int32 EmpSeq = 2;
  string ContractKind = 3;
  string DeptSeq = 4;
  string BeginDate = 5;
  string EndDate = 6;
  string EmpType = 7;
  string IsAgree = 8;
  string FrApplyDate = 9;
  string ToApplyDate = 10;
  string DeptSeq2 = 11;
  int32 EmpSeq2 = 12;
  string IsPrt = 13;
  string SMCertiType = 14;
  string FrIssueDate = 15;
  string ToIssueDate = 16;
}

message CertificateIssueResult { 
  
  int32 IdxNo = 1;
  string SMCertiTypeName = 2;
  string ApplyDate = 3;
  string IssueDate = 4;
  string EmpName = 5;
  int32 EmpSeq = 6;
  string EmpID = 7;
  string EmpEngName = 8;
  string DeptName = 9;
  int32 DeptSeq = 10;
  string UMJpName = 11;
  string EntDate = 12;
  string RetireDate = 13;
  string ResidID = 14;
  string Addr = 15;
  string JobName = 16;
  string CertiCnt = 17;
  string CertiDecCnt = 18;
  string CertiSubmit = 19;
  string TaxFrYm = 20;
  string TaxToYm = 21;
  string TaxEmpName = 22;
  string IsAgree = 23;
  string IssueNo = 24;
  string IsPrt = 25;
  string IssueEmpName = 26;
  string IssueEmpSeq = 27;
  string IsNoIssue = 28;
  string NoIssueReason = 29;
  string IsEmpApp = 30;
  string CompanyName = 31;
  string CompanyAddr = 32;
  string Owner = 33;
  string OwnerJpName = 34;
  string Term = 35;
  int32 SMCertiType = 36;
  string TypeSeq = 37;
  string status = 38;
  int32 CertiSeq = 39;

}


message LaborContractPrintSearchRequest {
  repeated LaborContractPrintSearchResult result = 1;  
  map<string, string> metadata = 2;
}

message CertificateIssueSearchRequest {
  repeated CertificateIssueSearchResult result = 1;  
  map<string, string> metadata = 2;
}

message CertificateIssueRequest {
  repeated CertificateIssueResult result = 1;  
  map<string, string> metadata = 2;
}

message Response {
  bool status = 1;  
  string message = 2;      
  string data = 3; 
  string errors = 4;
}